--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -26,7 +26,7 @@ jobs:
       run: |
         # запуск проверки проекта по flake8
         python -m flake8
-        cd yamdb_final/
+        cd yamdb_final
         pytest
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
