--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,11 +12,10 @@ services:
     env_file:
       - ./.env
   web:
+    container_name: yamdb_final_web_1
     build: .
+    image: yamdb_final_web_1:v1.0.0
     restart: always
-    command: gunicorn api_yamdb.wsgi:application --bind 0.0.0.0:8000
-    ports:
-      - "8000:8000"
     volumes:
       - static_value:/code/static/
       - media_value:/code/media/
