--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -45,7 +45,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/infra_actions:latest #TODO
+          tags: ${{ secrets.DOCKER_USERNAME }}/yamdb_final:v1.0.0
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
@@ -58,11 +58,17 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            # Выполняет pull образа с DockerHub
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/infra_actions:latest #TODO
-            #остановка всех контейнеров
-            sudo docker stop $(sudo docker ps -a -q)
-            sudo docker run --rm -d -p 8000:8000 ${{ secrets.DOCKER_USERNAME }}/infra_actions:latest #TODO
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yamdb_final:v1.0.0
+            sudo docker-compose stop
+            sudo docker-compose rm web
+            touch .env
+            echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
+            echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+            echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
+            echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
+            echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+            echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+            sudo docker-compose up -d
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
