--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -13,7 +13,7 @@ jobs:
       with:
         python-version: 3.8
 
-    - name: Install dependencies and static
+    - name: Install dependencies
       run: |
         # обновление pip
         python -m pip install --upgrade pip
@@ -21,7 +21,6 @@ jobs:
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
         # установка зависимостей
         pip install -r requirements.txt
-        python manage.py collectstatic
 
     - name: Test with flake8 and django tests
       run: |
