--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,6 +21,8 @@ services:
       - media_value:/code/media/
     depends_on:
       - db
+    links:
+      - db:db
     env_file:
       - ./.env
   nginx:
