--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,8 @@ services:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
       - ./.env
+    environment:
+      - POSTGRES_PASSWORD=fake_password
   web:
     container_name: yamdb_final
     build: .
