--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,8 @@ services:
   web:
     container_name: yamdb_final
     build: .
+    command: bash -c "python manage.py makemigrations &&
+                      python manage.py migrate"
     image: kondratevad/yamdb_final:v1.0.0
     restart: always
     volumes:
