--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,6 +3,8 @@ server {
 
     server_name 127.0.0.1;
 
+    server_tokens off;
+
     location /static/ {
         root /var/html/;
     }
@@ -12,6 +14,7 @@ server {
     }
 
     location / {
+        proxy_set_header Host $host;
         proxy_pass http://web:8000;
     }
 }
